fixing scrollbar animation

--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,13 @@
   color: white;
   transform: rotateY(180deg);
 }
+
+@media only screen and (max-width: 640px) {
+  section {
+    position:sticky;
+    position:-webkit-sticky;
+    top: 0;
+    /* min-height:50vh; */
+  }
+}
+
